# litemind-ui

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  DOCKER.md  DOCKER_ENVIRONMENTS.md  DOCKER_HEALTH_CHECKS.md  DOCKER_PUBLISHING.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  Dockerfile.nextjs  Dockerfile.streamlit  LICENSE  Makefile  N8N_INTEGRATION.md  N8N_INTEGRATION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE-0.0.1.md  config.py  docker-compose.dev.yml  docker-compose.hub.yml  docker-compose.macos.yml  docker-compose.prod.yml  docker-compose.yml  final_demo.py  fix_macos.sh  install.sh  logging_config.py  main.py  pyproject.toml  requirements-backend.txt  requirements-frontend.txt  requirements.txt  run.py  start_app.sh  start_n8n_integration.sh  (+3 more)
.chroma/: chroma.sqlite3
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-publish.yml  pages.yml  pr-checks.yml  release.yml  snyk-security.yml
.kiro/steering/: git-and-ci.md  project-overview.md  python-standards.md  security.md  typescript-standards.md
.streamlit/: config.toml
.superpowers/sdd/: progress.md
app/: __init__.py
app/backend/: conversation_store.py
app/backend/api/: __init__.py  auth.py  auth_deps.py  auth_service.py  auth_verify.py  chat.py  conversations.py  health.py  models.py  n8n_workflows.py  rag.py  security_utils.py  simple_tools.py  voice.py
app/backend/core/: config.py  embeddings.py  ollama_models.py
app/backend/models/: api_models.py
app/core/: __init__.py  environment.py  rag_formats.py  text_markup.py
app/frontend/: config.py
app/frontend/components/: __init__.py  conversation_sidebar.py  generative_ui.py  shared_ui.py  streaming_handler.py  text_renderer.py  tts_playback.py  tts_player.py  vllm_config.py  voice_input.py  voice_realtime.py  web_search_toggle.py
app/frontend/pages/: chat_page.py  rag_page.py  workflows_page.py
app/frontend/services/: backend_service.py  chat_service.py  rag_service.py
app/frontend/utils/: audio_recorder.py  memory_manager.py  text_processing.py  text_processing_clean.py
app/ingestion/: enhanced_document_processor.py  enhanced_extractors.py  file_ingest.py
app/models/: user.py
app/pwa/: manifest.webmanifest  sw.js
app/routes/: auth.py  chat.py  rag.py
app/services/: __init__.py  conversation_db.py  conversation_memory.py  file_ingest.py  host_service_manager.py  llm_gateway.py  n8n_service.py  ollama.py  rag_multi_agent.py  rag_service.py  simple_tools.py  speech_service.py  tool_use_chat.py  tts_service.py  tts_text_processing.py  vllm_service.py  voice_pipeline.py  web_search_crew.py  web_search_service.py
app/skills/: __init__.py  base.py  rag.py  registry.py  web_search.py
app/static/: manifest.json  service-worker.js
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: base.html  chat.html  rag.html  signin.html  signup.html  users.html
docs/: README.md  api-contract.md
docs/docker/: README.md  publishing.md
docs/superpowers/plans/: 2026-07-15-generative-ui-decomposition.md  2026-07-17-ui-redesign.md  2026-07-18-realtime-voice-mode.md  2026-07-20-unit-test-coverage.md  2026-07-22-user-authentication-plan.md
docs/superpowers/specs/: 2026-07-15-generative-ui-decomposition-design.md  2026-07-17-ui-redesign-design.md  2026-07-18-realtime-voice-mode-design.md  2026-07-18-temporal-awareness-design.md  2026-07-20-unit-test-coverage-design.md  2026-07-22-user-authentication-design.md
nextjs-frontend/: AGENTS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
nextjs-frontend/src/app/: auth-provider.tsx  globals.css  layout.tsx  page.tsx
nextjs-frontend/src/components/: citations.test.tsx  citations.tsx  generative-ui-renderer.tsx  knowledge-base.tsx  markdown-renderer.test.tsx  markdown-renderer.tsx  message-bubble.test.tsx  message-bubble.tsx  provider-key-prompt.test.tsx  provider-key-prompt.tsx  provider-override-badge.test.tsx  provider-override-badge.tsx  rag-attach-button.test.tsx  rag-attach-button.tsx  settings-panel.tsx  theme-provider.test.tsx  theme-provider.tsx  theme-toggle.test.tsx  theme-toggle.tsx  voice-activity.test.tsx  voice-activity.tsx  voice-input-button.tsx
nextjs-frontend/src/hooks/: use-provider-override.test.ts  use-provider-override.ts  use-rag-upload.test.ts  use-rag-upload.ts  use-realtime-voice.test.ts  use-realtime-voice.ts  use-voice-input.test.ts  use-voice-input.ts
nextjs-frontend/src/lib/: api.test.ts  api.ts  backend-proxy.test.ts  backend-proxy.ts  generative-ui.test.ts  generative-ui.ts  store.auth.test.ts  store.test.ts  store.ts  types.test.ts  types.ts  utils.test.ts  utils.ts  web-search-citations.test.ts  (+1 more)
scripts/: cache-setup.py  create-docker-repos.py  docker-entrypoint.sh  docker-env-setup.sh  docker-healthcheck.sh  docker-setup.sh  fix_macos.sh  generate-docker-env.py  graceful-shutdown.py  health-check.py  prepare-release.py  start_app.sh  startup-validation.py  validate-cache-setup.py  version.py
site/: _config.yml  developer.md  index.md
site/_layouts/: default.html
tests/: conftest.py  test_auth_deps.py  test_auth_router.py  test_auth_service.py  test_auth_verify.py  test_chat_auth.py  test_conversation_memory_isolation.py  test_conversation_store.py  test_conversations_api.py  test_rag_skills.py  test_rag_voice_auth.py  test_speech_service.py  test_voice_api.py  test_voice_pipeline.py
tests/core/: test_environment.py  test_rag_formats.py  test_text_markup.py
tests/ingestion/: test_enhanced_document_processor.py  test_enhanced_extractors.py  test_file_ingest.py
tests/services/: test_conversation_db.py  test_conversation_memory.py  test_host_service_manager.py  test_llm_gateway.py  test_ollama.py  test_rag_multi_agent.py  test_rag_service.py  test_speech_service.py  test_tts.py  test_tts_text_processing.py  test_web_search_crew.py  test_web_search_service.py
tests/skills/: test_skills.py
workflows/: file_operations_workflow.json  web_search_workflow.json
(+50 files in other folders)
