[project]
name = "litemind-ui"
version = "0.0.16"
description = "LiteMindUI - A comprehensive AI assistant with RAG, web search, and multimodal capabilities"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
]

[project.optional-dependencies]
# Backend: FastAPI + ML/RAG + Document Processing
backend = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    "litellm",
    
    # Core FastAPI
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "pydantic",
    "httpx",
    "requests",
    
    # RAG and ML
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "huggingface-hub",
    "transformers",
    "numpy",
    
    # PyTorch CPU-only
    "torch",
    "torchvision",

    # Document Processing
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "beautifulsoup4",
    "trafilatura",
    "striprtf",
    "odfpy",
    "openpyxl",
    "PyYAML",
    "camelot-py[cv]",
    "Pillow",
    "opencv-python-headless",
    "easyocr",
    "pandas",
    "nltk",
    "ollama",
    
    # Web Search
    "crewai",
    # Note: google-search-results removed - SerpAPI is called via httpx REST API directly
    
    # Text-to-Speech
    # Note: edge-tts removed - TTS uses kokoro (primary) or pyttsx3 (fallback)
    "pyttsx3",
    "kokoro",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    
    # Speech-to-Text (using transformers Whisper pipeline)
    # Note: faster-whisper removed - using transformers + Whisper for simpler stack
    # Audio processing for STT
    "librosa",
    "soundfile",
    # Required by transformers 5.x pipeline for device management
    "accelerate",
]

# Frontend: Streamlit + Audio/Voice
frontend = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    
    # Streamlit
    "streamlit",
    "streamlit-audiorecorder",
    "streamlit-webrtc",
    "av",
    "webrtcvad",
    
    # Pipecat (VAD + turn detection) - requires torch for Silero
    "pipecat-ai[silero,local-smart-turn-v3]",
    "torch",
    
    # Audio Processing
    "librosa",
    "soundfile",
    "numpy",
    
    # Text Processing
    "wordfreq",
    "nltk",
    
    # HTTP client for backend communication
    "httpx",
    "requests",
]

[tool.uv]
# Dependency groups for optional installation
# Backend: FastAPI, ML, RAG
# Frontend: Streamlit, audio
# Dev: testing and code quality

[dependency-groups]
backend = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    "litellm",
    
    # Core FastAPI
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "pydantic",
    "httpx",
    "requests",
    
    # RAG and ML
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "huggingface-hub",
    "transformers",
    "numpy",
    
    # PyTorch CPU-only
    "torch",
    "torchvision",

    # Document Processing
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "beautifulsoup4",
    "trafilatura",
    "striprtf",
    "odfpy",
    "openpyxl",
    "PyYAML",
    "camelot-py[cv]",
    "Pillow",
    "opencv-python-headless",
    "easyocr",
    "pandas",
    "nltk",
    "ollama",

    # Web Search
    "crewai",
    # Note: google-search-results removed - SerpAPI is called via httpx REST API directly
    
    # Text-to-Speech
    # Note: edge-tts removed - TTS uses kokoro (primary) or pyttsx3 (fallback)
    "pyttsx3",
    "kokoro",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    
    # Speech-to-Text (using transformers Whisper pipeline)
    # Note: faster-whisper removed - using transformers + Whisper for simpler stack
    # Audio processing for STT
    "librosa",
    "soundfile",
    # Required by transformers 5.x pipeline for device management
    "accelerate",
]

frontend = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    
    # Streamlit
    "streamlit",
    "streamlit-audiorecorder",
    "streamlit-webrtc",
    "av",
    "webrtcvad",
    
    # Pipecat (VAD + turn detection) - requires torch for Silero
    "pipecat-ai[silero,local-smart-turn-v3]",
    "torch",
    
    # Audio Processing
    "librosa",
    "soundfile",
    "numpy",
    
    # Text Processing
    "wordfreq",
    "nltk",
    
    # HTTP client for backend communication
    "httpx",
    "requests",
]

dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "ty>=0.0.60",
]

# All dependencies for local development (both backend and frontend)
all = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    "litellm",
    
    # Core FastAPI
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "pydantic",
    "httpx",
    "requests",
    
    # RAG and ML
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "huggingface-hub",
    "transformers",
    "numpy",
    
    # PyTorch CPU-only
    "torch",
    "torchvision",

    # Document Processing
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "beautifulsoup4",
    "trafilatura",
    "striprtf",
    "odfpy",
    "openpyxl",
    "PyYAML",
    "camelot-py[cv]",
    "Pillow",
    "opencv-python-headless",
    "easyocr",
    "pandas",
    "nltk",
    "ollama",

    # Web Search
    "crewai",
    
    # Text-to-Speech
    "pyttsx3",
    "kokoro",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    
    # Streamlit
    "streamlit",
    "streamlit-audiorecorder",
    "streamlit-webrtc",
    "av",
    "webrtcvad",
    
    # Pipecat (VAD + turn detection)
    "pipecat-ai[silero,local-smart-turn-v3]",
    
    # Audio Processing
    "librosa",
    "soundfile",
    
    # Text Processing
    "wordfreq",
]

# Configure PyTorch to use CPU-only version
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ty]
environment = { python-version = "3.13" }
