[project]
name = "litemind-ui"
version = "0.0.16"
description = "LiteMindUI - A comprehensive AI assistant with RAG, web search, and multimodal capabilities"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
]

[project.optional-dependencies]
# Backend: FastAPI + ML/RAG + Document Processing
backend = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    "litellm",
    
    # Core FastAPI
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "pydantic",
    "httpx",
    "requests",
    
    # RAG and ML
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "huggingface-hub",
    "transformers",
    "numpy",
    
    # PyTorch CPU-only
    "torch",
    "torchvision",

    # Document Processing
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "beautifulsoup4",
    "trafilatura",
    "striprtf",
    "odfpy",
    "openpyxl",
    "PyYAML",
    "camelot-py[cv]",
    "Pillow",
    "opencv-python-headless",
    "easyocr",
    "pandas",
    "nltk",
    "ollama",
    
    # Web Search
    "crewai",
    # Note: google-search-results removed - SerpAPI is called via httpx REST API directly
    
    # Text-to-Speech
    # Note: edge-tts removed - TTS uses kokoro (primary) or pyttsx3 (fallback)
    "pyttsx3",
    "kokoro",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    
    # Speech-to-Text (using transformers Whisper pipeline)
    # Note: faster-whisper removed - using transformers + Whisper for simpler stack
    # Audio processing for STT
    "librosa",
    "soundfile",
    # Required by transformers 5.x pipeline for device management
    "accelerate",
]

[tool.uv]
# Dependency groups for optional installation
# Backend: FastAPI, ML, RAG
# Dev: testing and code quality

[dependency-groups]
backend = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    "litellm",
    
    # Core FastAPI
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "pydantic",
    "httpx",
    "requests",
    
    # RAG and ML
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "huggingface-hub",
    "transformers",
    "numpy",
    
    # PyTorch CPU-only
    "torch",
    "torchvision",

    # Document Processing
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "beautifulsoup4",
    "trafilatura",
    "striprtf",
    "odfpy",
    "openpyxl",
    "PyYAML",
    "camelot-py[cv]",
    "Pillow",
    "opencv-python-headless",
    "easyocr",
    "pandas",
    "nltk",
    "ollama",

    # Web Search
    "crewai",
    # Note: google-search-results removed - SerpAPI is called via httpx REST API directly
    
    # Text-to-Speech
    # Note: edge-tts removed - TTS uses kokoro (primary) or pyttsx3 (fallback)
    "pyttsx3",
    "kokoro",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    
    # Speech-to-Text (using transformers Whisper pipeline)
    # Note: faster-whisper removed - using transformers + Whisper for simpler stack
    # Audio processing for STT
    "librosa",
    "soundfile",
    # Required by transformers 5.x pipeline for device management
    "accelerate",
]

dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "ty>=0.0.60",
]

voice = [
    # Realtime voice mode: Pipecat WebRTC transport + Silero VAD (core includes both)
    "pipecat-ai",
    # Optional dep required by the Pipecat small-webrtc transport (SmallWebRTCConnection)
    "aiortc",
]

# All dependencies for local development (both backend and frontend)
all = [
    # Shared core dependencies
    "python-dotenv",
    "psutil",
    "litellm",
    
    # Core FastAPI
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "pydantic",
    "httpx",
    "requests",
    
    # RAG and ML
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "huggingface-hub",
    "transformers",
    "numpy",
    
    # PyTorch CPU-only
    "torch",
    "torchvision",

    # Document Processing
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "beautifulsoup4",
    "trafilatura",
    "striprtf",
    "odfpy",
    "openpyxl",
    "PyYAML",
    "camelot-py[cv]",
    "Pillow",
    "opencv-python-headless",
    "easyocr",
    "pandas",
    "nltk",
    "ollama",

    # Web Search
    "crewai",
    
    # Text-to-Speech
    "pyttsx3",
    "kokoro",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",

    # Audio Processing
    "librosa",
    "soundfile",
    "pipecat-ai",
    # Required by the Pipecat small-webrtc transport (SmallWebRTCConnection)
    "aiortc",
]

# Configure PyTorch to use CPU-only version
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ty]
environment = { python-version = "3.13" }

# `pipecat` is an optional dependency (the `voice` group) that is NOT installed in
# CI's `ty` job, which installs only `--group backend --group dev`. Allow its
# submodules as unresolved imports so type-checking of the voice pipeline does not
# fail in CI. New `pipecat.*` imports must be added here to avoid `unresolved-import`.
[tool.ty.analysis]
allowed-unresolved-imports = [
    "pipecat.audio.vad.silero",
    "pipecat.audio.vad.vad_analyzer",
    "pipecat.frames.frames",
    "pipecat.pipeline.pipeline",
    "pipecat.pipeline.worker",
    "pipecat.processors.aggregators.llm_context",
    "pipecat.processors.aggregators.llm_response_universal",
    "pipecat.processors.audio.vad_processor",
    "pipecat.processors.frame_processor",
    "pipecat.services.openai.base_llm",
    "pipecat.services.settings",
    "pipecat.services.stt_service",
    "pipecat.services.tts_service",
    "pipecat.transports.base_transport",
    "pipecat.transports.smallwebrtc.connection",
    "pipecat.transports.smallwebrtc.transport",
    "pipecat.workers.runner",
]

[tool.pytest.ini_options]
# Async tests (Pipecat voice pipeline) run via the anyio pytest plugin, which
# is auto-discovered; enable auto mode so plain `async def test_*` are run.
anyio_mode = "auto"
testpaths = ["tests"]
# Coverage is reported for visibility; there is intentionally NO fail_under
# gate (the goal is comprehensive per-module tests, not a hard percentage).
addopts = "--cov=app --cov-report=term-missing"
